[package]
name = "csv"
version = "0.5.2"
authors = ["Steve Flanagan"]

description="sql group by on arbitrary text or csv files"

[profile.dev]
panic = 'abort'

[profile.release]
lto=true
codegen-units = 1
opt-level = 3
panic = 'abort'
debug = false
debug-assertions = false
trustflags = ["-C", "target-cpu=native"]

[[bin]]
name = "csv"
path = "src/main.rs"

[[bin]]
name = "create_very_large_file"
path = "src/create_very_large_file.rs"

[[test]]
name = "general_tests"
path = "src/test.rs"

[[bin]]
name = "quick"
path = "src/quick.rs"


[dependencies]
#structopt = {version = "0.2.18", feature=["color","termsize","wrap_help"]}
structopt = {version = "0.3.0", feature=["color","termsize","wrap_help"]}
cpu-time = "0.1.0"
csv = "~1"
grep-cli = "0.1.3"
regex = "~1"
glob = "0.3.0"
prettytable-rs = "~0.6"
chan = "~0.1.21"
lazy_static = "1.3.0"
crossbeam-channel = "~0.3.6"
crossbeam = "~0.7"
tempfile = "3.1.0"
num_cpus = "1.0"
clap = "~2"
colored = "1.8"

assert_cmd = "0.10"
predicates = "1"

