[package]
edition = '2018'
name = "csv-groupby"
version = "0.6.2"
authors = ["Steve Flanagan"]

description="execute a sql-like group-by on arbitrary text or csv files"

homepage="https://github.com/sflanaga/csv-groupby"
documentation="https://github.com/sflanaga/csv-groupby"
repository="https://github.com/sflanaga/csv-groupby"
license = "Unlicense OR MIT"
readme="README.md"
keywords=["report", "text", "sql", "csv", "regex"]

[profile.dev]
panic = 'abort'

[profile.release]
debug = false 
debug-assertions = false
# lto does help but not by much with pcre2
lto = true
codegen-units=1
opt-level = 3
panic = 'abort'  # does cleanup upon panics
trustflags = ["-C", "target-cpu=native"]

[[bin]]
name = "gb"
path = "src/main.rs"

[[bin]]
name = "create_very_large_file"
path = "src/create_very_large_file.rs"

[[test]]
name = "general_tests"
path = "src/test.rs"

[[bin]]
name = "quick"
path = "src/quick.rs"

[[bin]]
name = "append"
path = "src/append.rs"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"

[dependencies]
#structopt = {version = "0.2.18", feature=["color","termsize","wrap_help"]}
structopt = {version = "0.3.1", feature=["color","termsize","wrap_help"]}
cpu-time = "0.1.0"
atty = "0.2"
csv = "~1"
smallvec = "0.6.10"
grep-cli = "0.1.3"
regex = "1.3.1"
pcre2 = "0.2.2"
bstr = "0.2.8"
ignore = "0.4.10"
prettytable-rs = "~0.6"
chan = "~0.1.21"
lazy_static = "1.3.0"
crossbeam-channel = "~0.3.9"
crossbeam = "~0.7"
crossbeam-deque = "0.7.1"
tempfile = "3.1.0"
num_cpus = "1.0"
clap = "~2"
colored = "1.8"
itertools = "0.8.0"
fxhash = "0.2.1"
fnv = "1.0.6"
seahash = "3.0.6"


assert_cmd = "0.10"
predicates = "1"

