[package]
build = "build.rs"
edition = '2018'
name = "csv-groupby"
version = "0.10.1"
authors = ["Steve Flanagan"]

description="execute a sql-like group-by on arbitrary text or csv files"

homepage="https://github.com/sflanaga/csv-groupby"
documentation="https://github.com/sflanaga/csv-groupby"
repository="https://github.com/sflanaga/csv-groupby"
license = "Unlicense OR MIT"
readme="README.md"
keywords=["report", "text", "sql", "csv", "regex"]

[profile.dev]
panic = 'abort'

[profile.release]
debug = false
#debug-assertions = false
# lto does help but not by much with pcre2
#lto = true
#codegen-units=1
#opt-level = 3
#panic = 'abort'  # does cleanup upon panics
#trustflags = ["-C", "target-cpu=native"]

[[bin]]
name = "gb"
path = "src/main.rs"

[[bin]]
name = "create_very_large_file"
path = "src/create_very_large_file.rs"

[[test]]
name = "general_tests"
path = "src/test.rs"

[[bin]]
name = "quick"
path = "src/quick.rs"

[[bin]]
name = "append"
path = "src/append.rs"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }



[dependencies]
structopt = {version = "0.3.1", feature=["color","termsize","wrap_help"]}
cpu-time = "1.0"
atty = "0.2"
csv = "~1"
smallvec = "1.4.0"
grep-cli = "0.1.5"
regex = "1.3.9"
pcre2 = "0.2.3"
bstr = "0.2.13"
ignore = "0.4.16"
prettytable-rs = "~0.8"
chan = "~0.1.23"
lazy_static = "1.3.0"
crossbeam-channel = "~0.4.2"
crossbeam = "~0.7"
crossbeam-deque = "0.7.3"
tempfile = "3.1.0"
num_cpus = "1.0"
#clap = "~2"
colored = "1.8"
itertools = "0.9.0"
#fxhash = "0.2.1"
#fnv = "1.0.6"
#seahash = "3.0.6"
flate2 = "1.0.14"
zstd = "0.9.0+zstd.1.5.0"
assert_cmd = "0.10"
predicates = "1"
backtrace = "0.3.46"
